 * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
 * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
 * Added new StreamField block type `StaticBlock` (Benoît Vogel)
 * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)
 * Fix: `AbstractForm` now respects custom `get_template` methods on the page model (Gagaro)
 * Fix: Use specific page model for the parent page in the explore index (Gagaro)
 * Fix: Remove responsive styles in embed when there is no ratio available (Gagaro)
 * Fix: Parent page link in page search modal no longer disappears on hover (Dan Braghis)
 * Fix: ModelAdmin views now consistently call `get_context_data` (Andy Babic)
 * Fix: Header for search results on the redirects index page now shows the correct count when the listing is paginated (Nick Smith)
 * Fix: `set_url_paths` management command is now compatible with Django 1.10 (Benjamin Bach)
 * Fix: Form builder email notifications now output multiple values correctly (Sævar Öfjörð Magnússon)
 * Fix: Closing 'more' dropdown on explorer no longer jumps to the top of the page (Ducky)
 * Fix: Users with only publish permission are no longer given implicit permission to delete pages (Matt Westcott)
 * Fix: `search_garbage_collect` management command now works when wagtailsearchpromotions is not installed (Morgan Aubert)


1.7 (20.10.2016)
~~~~~~~~~~~~~~~~

 * Elasticsearch 2 support (Karl Hobley)
 * Added parameters to image tag to specify file type and JPEG compression level (Karl Hobley)
 * Added support for AWS CloudFront in frontend cache invalidation module (Rob Moorman)
 * Unpublishing a page now gives the option to unpublish subpages too (Jordi Joan)
 * The ``|embed`` filter has been converted into a templatetag ``{% embed %}`` (Janneke Janssen)